# steam-fake-launch

./: config.json  libraryfolders.vdf  pyproject.toml  script.py
datatypes/: Game.py
src/: get_steam_win.py  parse_steam_lib.py  script.py
src/datatypes/: Game.py
